# synapse-plugin-switchboard

./: .editorconfig  .gitignore  README.md  commitlint.config.js  meson.build  package-lock.json  package.json
meta/: README.md.njk
src/: Main.vala  WorkerLink.vala
vapi/: config.vapi
